Update the recordm api
