# openapi/recordm.json
@@ -393,63 +393,6 @@
         }
       }
     },
-    "/recordm/definitions/stats" : {
-      "get" : {
-        "tags" : [ "Definitions" ],
-        "summary" : "Retrieves statistics about a definition.",
-        "description" : "Retrieves the sta",
-        "operationId" : "getDefinitionStats",
-        "parameters" : [ {
-          "name" : "defId",
-          "in" : "query",
-          "description" : "The definition identifier",
-          "schema" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }, {
-          "name" : "def",
-          "in" : "query",
-          "description" : "The definition name",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "The definition statistics",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/DefinitionStats"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Invalid request",
-            "content" : {
-              "application/json" : {
-                "examples" : {
-                  "message" : {
-                    "description" : "message",
-                    "value" : {
-                      "error" : "the error details"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401" : {
-            "description" : "Unauthorized access."
-          },
-          "403" : {
-            "description" : "The user is not allowed to perfom the operation"
-          }
-        }
-      }
-    },
     "/recordm/definitions/{definitionId}/state/{state}" : {
       "put" : {
         "tags" : [ "Definitions" ],
@@ -1918,72 +1861,6 @@
           }
         }
       },
-      "Definition" : {
-        "required" : [ "id", "name", "state", "version" ],
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          },
-          "duplicable" : {
-            "type" : "boolean"
-          },
-          "state" : {
-            "type" : "string"
-          },
-          "version" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }
-      },
-      "DefinitionStats" : {
-        "type" : "object",
-        "properties" : {
-          "definition" : {
-            "$ref" : "#/components/schemas/Definition"
-          },
-          "fields" : {
-            "$ref" : "#/components/schemas/Fields"
-          },
-          "instances_on_db" : {
-            "type" : "integer",
-            "format" : "int64"
-          },
-          "instances_on_es" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "es_errors" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }
-      },
-      "Fields" : {
-        "type" : "object",
-        "properties" : {
-          "count" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "$refs" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "$extRefs" : {
-            "type" : "integer",
-            "format" : "int32"
-          }
-        }
-      },
       "CreateDefinitionRequest" : {
         "required" : [ "name" ],
         "type" : "object",
@@ -2069,6 +1946,38 @@
           }
         }
       },
+      "Definition" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "duplicable" : {
+            "type" : "boolean"
+          },
+          "state" : {
+            "type" : "string",
+            "enum" : [ "enabled", "disabled", "deleteInProgress" ]
+          },
+          "fieldDefinitions" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/FieldDefinition"
+            }
+          },
+          "version" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }
+      },
       "DomainLinks" : {
         "required" : [ "size" ],
         "type" : "object",
@@ -2124,6 +2033,32 @@
           }
         }
       },
+      "DefinitionInfo" : {
+        "required" : [ "id", "name", "state", "version" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "duplicable" : {
+            "type" : "boolean"
+          },
+          "state" : {
+            "type" : "string"
+          },
+          "version" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }
+      },
       "Instance" : {
         "required" : [ "id", "instanceLabel", "jsonDefinition", "version" ],
         "type" : "object",
@@ -2148,7 +2083,7 @@
             }
           },
           "jsonDefinition" : {
-            "$ref" : "#/components/schemas/Definition"
+            "$ref" : "#/components/schemas/DefinitionInfo"
           },
           "fields" : {
             "type" : "array",
