# src/api/recordm/model/definition-info.ts
@@ -1,0 +1,45 @@
+
+
+/**
+ * 
+ * @export
+ * @interface DefinitionInfo
+ */
+export interface DefinitionInfo {
+    /**
+     * 
+     * @type {number}
+     * @memberof DefinitionInfo
+     */
+    'id': number;
+    /**
+     * 
+     * @type {string}
+     * @memberof DefinitionInfo
+     */
+    'name': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DefinitionInfo
+     */
+    'description'?: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof DefinitionInfo
+     */
+    'duplicable'?: boolean;
+    /**
+     * 
+     * @type {string}
+     * @memberof DefinitionInfo
+     */
+    'state': string;
+    /**
+     * 
+     * @type {number}
+     * @memberof DefinitionInfo
+     */
+    'version': number;
+}
