# src/api/recordm/model/index.ts
@@ -3,12 +3,11 @@ export * from "./create-domain-request"
 export * from "./decorated-definition"
 export * from "./decorated-domain"
 export * from "./definition"
+export * from "./definition-info"
 export * from "./definition-links"
-export * from "./definition-stats"
 export * from "./domain-links"
 export * from "./field-definition"
 export * from "./field-error"
-export * from "./fields"
 export * from "./instance"
 export * from "./instance-field"
 export * from "./integration-add-message"
